# REF

./: .gitignore  AI.xlsx  AI_REF_Report.xlsx  CHANGELOG.md  LICENSE  README.md
catalog/: capabilities.yaml  capability-catalog.md  generic-capabilities.yaml  requirement-types.md
compiler/: README.md  evaluation-rules.md  gap-rules.md  generation-rules.md  mapping-rules.md  transformation-rules.md  validation-rules.md
core/: capability-mapping.md  classification.md  engineering.md  evaluation.md  gap-analysis.md  lint.md  manifesto.md  requirement-object.md  rubric.md  schemas.md  skill.md  workflow.md
docs/: architecture.md  engine-alpha.md  import-pipeline.md  philosophy.md  review-workflow.md  roadmap.md  terminology.md
docs/decisions/: 0001-capability-first.md  0002-binary-before-scoreable.md  0003-evidence-separation.md  README.md  (+4 more)
engine/: README.md  pyproject.toml
engine/ref_engine/: analyzer.py  classifier.py  cli.py  detector.py  importers.py  linter.py  loader.py  mapper.py  models.py  report.py  review_workbook.py
engine/tests/: test_classifier.py  test_detector.py  test_linter.py  test_report.py  test_review_workbook.py
examples/: example-rewrite.md  simple-review.md
knowledge/: README.md
policies/: default.yaml  scoring.yaml  style.yaml  sweden-luf.yaml
projects/: example-aodb-saas.yaml
rules/: evaluation.yaml  gap.yaml  transformations.yaml
schemas/: project-config.schema.yaml  requirement-object.schema.yaml
templates/: binary-requirement.md  binary.md  review-output.md  review-report.md  scoreable-requirement.md  scoreable.md
(+82 files in other folders)
