[project]
name = "ref-engine"
version = "0.1.0"
description = "REF Engine Alpha"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0"
]

[project.scripts]
ref = "ref_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ref_engine*"]
